--- a/app/assets/stylesheets/components/_single_game_container.scss
+++ b/app/assets/stylesheets/components/_single_game_container.scss
@@ -12,11 +12,11 @@
   font-family: 'Glegoo', serif;
   text-align: center;
   font-weight: 400;
-  font-size: 1.5em;
+  font-size: 1em;
   line-height: 1em;
   color: white;
   display: inline-block;
-  border-bottom: 1px solid white;
+  // border-bottom: 1px solid white;
   padding: 0em .5em .6em;
 }
 
@@ -43,7 +43,7 @@
 
 .nav-xbox, .nav-ps4, .nav-switch {
   left: 0;
-  height: 69px;
+  height: 68px;
   width: 100%;
   font-family: 'Glegoo', serif;
   text-align: center;
